--- a/res/layout/activity_calendar_event.xml
+++ b/res/layout/activity_calendar_event.xml
@@ -26,7 +26,7 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView4"
         android:layout_marginTop="30dp"
-        android:text="@string/dates"
+        android:text="@string/endtime"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -36,7 +36,7 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="30dp"
-        android:text="@string/category"
+        android:text="@string/startdate"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -66,7 +66,7 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="30dp"
-        android:text="@string/time"
+        android:text="@string/starttime"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -104,6 +104,7 @@
         android:layout_alignBaseline="@+id/textView4"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/editText3"
+        android:inputType="time"
         android:ems="10" />
 
     <EditText
@@ -113,6 +114,7 @@
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignLeft="@+id/editText4"
+        android:inputType="time"
         android:ems="10" />
 
     <EditText
@@ -122,15 +124,50 @@
         android:layout_alignBaseline="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
         android:layout_alignLeft="@+id/editText5"
+        android:inputType="date"
         android:ems="10" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_below="@+id/editText6"
+        android:layout_marginTop="30dp"
+        android:text="@string/enddate" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText6"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
         android:text="@string/submit" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_below="@+id/textView7"
+        android:layout_marginTop="30dp"
+        android:text="@string/category" />
+
+    <EditText
+        android:id="@+id/editText7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView8"
+        android:layout_alignLeft="@+id/editText6"
+        android:ems="10"
+        android:inputType="date" />
+
+    <EditText
+        android:id="@+id/editText8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignLeft="@+id/editText7"
+        android:ems="10" />
 
 </RelativeLayout>
