--- a/app/src/main/res/layout/activity_calendar_event.xml
+++ b/app/src/main/res/layout/activity_calendar_event.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.calendarevent2.CalendarEvent" >
+    tools:context="com.example.kevin.calendarapp" >
 	
     <TableRow 
         android:id="@+id/nameRow"
@@ -51,7 +51,7 @@
 	    <EditText
 	        android:id="@+id/description_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -74,7 +74,7 @@
 	    <EditText
 	        android:id="@+id/location_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -97,7 +97,7 @@
 	    <EditText
 	        android:id="@+id/startTime_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -120,7 +120,7 @@
 	    <EditText
 	        android:id="@+id/endTime_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -143,7 +143,7 @@
 	    <EditText
 	        android:id="@+id/startDate_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -166,7 +166,7 @@
 	    <EditText
 	        android:id="@+id/endDate_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
@@ -189,7 +189,7 @@
 	    <EditText
 	        android:id="@+id/category_edit"
 	        android:layout_width="match_parent"
-	        android:layout_height="30dp" >
+	        android:layout_height="wrap_content" >
 	    </EditText>    
 
     </TableRow>
