--- a/app/src/main/res/layout/activity_daily_view.xml
+++ b/app/src/main/res/layout/activity_daily_view.xml
@@ -15,9 +15,7 @@
         android:ems="10"
         android:id="@+id/daily_date"
         android:clickable="false"
-        android:editable="false"
-        android:background="@color/white"
-        android:textColor="@color/pink"/>
+        android:editable="false"/>
 
 
 
