Search,Deletion,Editing
Added in search screen and functionality, deletion functionality and
edit functionality

--- a/app/src/main/res/layout/activity_calendar_event.xml
+++ b/app/src/main/res/layout/activity_calendar_event.xml
@@ -209,5 +209,9 @@
 
         </Button>
 
+        <Button
+            android:id="@+id/delete_button"
+            android:text="Delete" />
+
     </TableLayout>
 </ScrollView>
