--- a/app/src/main/res/layout/activity_daily_view.xml
+++ b/app/src/main/res/layout/activity_daily_view.xml
@@ -17,28 +17,9 @@
         android:clickable="false"
         android:editable="false"/>
 
-
-
-    <ScrollView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView" >
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/containsEvents">
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="100dp"
-                android:text="SampleEvent"
-                android:id="@+id/button" />
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:id="@+id/eventList" />
 
 </LinearLayout>
