--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,4 +3,4 @@
     android:id="@+id/rowText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-/>
+    android:textSize="20sp" />
