--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,4 +3,5 @@
     android:id="@+id/rowText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:textSize="20sp" />
