Revert "Spinner Remove"
This reverts commit f7665ec3a10d8a8a2daf71a0aa511ca76187d1af.

--- a/app/src/main/res/layout/edit_bar_constant.xml
+++ b/app/src/main/res/layout/edit_bar_constant.xml
@@ -3,20 +3,20 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="@dimen/edit_bar_height">
 
-    <!--<Spinner-->
-        <!--android:id="@+id/views_spinner"-->
-        <!--android:layout_width="74dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:entries="@array/view_array"-->
-        <!--android:spinnerMode="dropdown" />-->
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/views_spinner"
+        android:layout_width="74dp"
         android:layout_height="wrap_content"
-        android:text="Views"
-        android:layout_weight="1"
-        android:id="@+id/change_views" />
+        android:entries="@array/view_array"
+        android:spinnerMode="dropdown" />
+
+    <!--<Button-->
+        <!--style="?android:attr/buttonStyleSmall"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Views"-->
+        <!--android:layout_weight="1"-->
+        <!--android:id="@+id/change_views" />-->
 
     <Button
         style="?android:attr/buttonStyleSmall"
