--- a/app/src/main/res/layout/edit_bar_constant.xml
+++ b/app/src/main/res/layout/edit_bar_constant.xml
@@ -46,7 +46,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Setting"
+        android:text="Category"
         android:layout_weight="1"
         android:id="@+id/settings" />
 </LinearLayout>
