--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -11,4 +11,10 @@
     <item name="bluepurple" type="color">#4433FF</item>
     <item name="white" type="color">#FFFFFF</item>
 
+
+    <color name="event_color_01">#59dbe0</color>
+    <color name="event_color_02">#f57f68</color>
+    <color name="event_color_03">#87d288</color>
+    <color name="event_color_04">#f8b552</color>
+
 </resources>
